--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,9 +19,10 @@ header#main-header {
 .btn.hot {
 	background: #ba0d0d;
 	padding: 10px;
-	border-radius: 8px;
+	border-radius: 5px;
 	color: #fff;
 	cursor: pointer;
+	margin: 3px;
 }
 
 a#logo {
@@ -46,6 +47,11 @@ a#logo {
 	min-height: 400px;
 	border-radius: 10px;
 	padding: 30px;
+}
+
+.center {
+	text-align: center;
+	margin: 30px 0 30px 0;
 }
 
 h1, h2, h3 {
